# codescan

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/orchestration/: registry.json  registry.json.bak
.github/workflows/: ci.yml
src/codescan/: __init__.py  __main__.py  capabilities.py  cli.py
src/codescan/sensors/: __init__.py  all_command.py  dead_dispatch.py  depcruiser_sensor.py  gitleaks_sensor.py  knip_sensor.py  ruff_sensor.py  semgrep_sensor.py  type_sensor.py  vulture_sensor.py
src/codescan/shared/: concurrency.py  config.py  runner.py
tests/: _helpers.py  _smoke_runner.py  test_all_aggregator.py  test_arch.py  test_cli_meta.py  test_codescan.py  test_dead.py  test_improvements.py  test_lint.py  test_parser.py  test_sec.py  test_secrets.py  test_type.py  test_vendor.py
