[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codescan-cli"
version = "1.2.2"
description = "Code-quality sensor orchestrator for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "heldigard" }
]
keywords = ["cli", "semgrep", "vulture", "gitleaks", "code-quality", "llm-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "vulture>=2.11"]

[project.scripts]
codescan = "codescan.cli:main"

[project.urls]
Homepage = "https://github.com/heldigard/codescan"
Repository = "https://github.com/heldigard/codescan"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/codescan"]
